added styles and colours

--- a/danny/day1/index.html
+++ b/danny/day1/index.html
@@ -2,9 +2,14 @@
     <head>
         <title>(1/14) Science Facts!</title>
         <script src="/util/infoGrabber.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     </head>
     <body>
         <script src="/danny/day1/backend.js"></script>
-        <h3 id="fact"></h1>
+        <div class='factDiv'>
+            <h3 id="fact"></h1>
+        </div>
     </body>
 </html>
