--- a/danny/day1/index.html
+++ b/danny/day1/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
-        <title>(1/14) Science Facts!</title>
-        <script src="/util/infoGrabber.js"></script>
+        <title>(1/14) Random fun facts!</title>
+        <script src="/util/dbWorker.js"></script>
+        <link rel="stylesheet" href="/danny/day1/style.css">
     </head>
     <body>
         <script src="/danny/day1/backend.js"></script>
