--- a/danny/day1/index.html
+++ b/danny/day1/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" id="style" type="text/css" href="style-redblack.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
         <title>(1/14) Random fun facts!</title>
